force-app/main/default/objects/DomainMapping__mdt/DomainMapping__mdt.object-meta.xml
<CustomObject>
    <label>Domain Mapping</label>
    <pluralLabel>Domain Mappings</pluralLabel>
</CustomObject>