force-app/main/default/objects/DomainMapping__mdt/fields/DomainClass__c.field-meta.xml
<CustomField>
    <fullName>DomainClass__c</fullName>
    <label>Domain Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>