force-app/main/default/objects/DomainMapping__mdt/fields/RepositoryClass__c.field-meta.xml
<CustomField>
    <fullName>RepositoryClass__c</fullName>
    <label>Repository Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccountRepositoryImpl</fullName>
                <default>true</default>
                <label>AccountRepositoryImpl</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>