force-app/main/default/objects/DomainMapping__mdt/fields/ServiceClass__c.field-meta.xml
<CustomField>
    <fullName>ServiceClass__c</fullName>
    <label>Service Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccountService</fullName>
            </value>
            <value>
                <fullName>ContactService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>